--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@agentclientprotocol/sdk": "^0.13.1",
     "ajv": "^8.17.1",
     "chalk": "^5.6.2",
     "express": "^5.2.1",
